# woof

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .travis.sh  .travis.yml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CrossToWin32.cmake  CrossToWin64.cmake  Makefile.am  README.md  WinMBF.dsp  WinMBF.dsw  WoofInstall.cmake.in  alsoft  betagrph.wad  betalevl.wad  compile+install-script-for-linux.sh  config.h.in  configure.ac  fps_patch.diff  vcpkg-configuration.json  vcpkg.json  watermap.wad  win-textfile
.github/workflows/: build.yml  ci.yml  linter.yml  main.yml  packages.yml  release.yml  update_wiki.yml  win_msvc.yml
Source/: Am_map.c  CMakeLists.txt  D_deh.c  D_deh.h  D_englsh.h  D_items.c  D_main.c  D_net.h  D_player.h  D_think.h  D_ticcmd.h  Doomstat.c  Dstrings.c  Dstrings.h  F_finale.c  F_finale.h  G_game.c  G_game.h  Hu_lib.c  Hu_lib.h  Hu_stuff.c  Hu_stuff.h  I_main.c  I_net.c  I_net.h  I_sound.c  I_sound.h  I_system.c  I_system.h  I_video.c  Info.c  M_cheat.c  M_cheat.h  M_fixed.h  M_menu.c  M_menu.h  M_misc.c  M_misc.h  Makefile.am  P_doors.c  (+247 more)
autoload/all-all/: woofhud.lmp
autoload/chex.wad/: brghtmps.lmp  chex.deh  droppeditem.deh  extchex.deh  umapdef.lmp
autoload/chex2.wad/: brghtmps.lmp
autoload/doom-all/: bloodcolor.deh  brghtmps.lmp  crossh.wad
autoload/doom.wad/: brghtmps.lmp  umapdef.lmp
autoload/doom2.wad/: brghtmps.lmp  umapdef.lmp
autoload/e1m4b.wad/: umapinfo.lmp
autoload/e1m8b.wad/: umapinfo.lmp
autoload/hacx.wad/: bloodcolor.deh  brghtmps.lmp
autoload/masterlevels.wad/: UMAPINFO.lmp  masterlevels_um.wad  umapinfo.lmp
autoload/nerve.wad/: nerve_um.wad  umapdef.lmp
autoload/plutonia.wad/: brghtmps.lmp
autoload/sigil_v1_21.wad/: umapdef.lmp
autoload/tnt.wad/: brghtmps.lmp
base/: CMakeLists.txt
base/all-all/: amapdef.json  brghtmps.lmp  compdb.lmp  declare.lmp  declare.txt  fuzztran.lmp  sbardef  sbardef.json  sbardef.lmp  sbhuddef.json  sbhuddef.lmp  skytran.lmp  woofhud.lmp
base/all-all/actors/: archvile.txt  baby.txt  brain.txt  bruiser.txt  caco.txt  cyber.txt  demon.txt  doomdeco.txt  doomimp.txt  doommisc.txt  fatso.txt  keen.txt  lostsoul.txt  painelem.txt  possess.txt  revenant.txt  spider.txt
base/betalevl.wad/: umapdef.lmp
base/chex-all/: brghtmps.lmp
base/chex.wad/: brghtmps.lmp  dehacked.lmp
base/chex2.wad/: dehacked.lmp
base/e1m4b.wad/: dehacked.lmp
base/e1m8b.wad/: dehacked.lmp  umapinfo.lmp
base/extras.wad/: sbardef.lmp
base/hacx.wad/: bloodcolor.deh  brghtmps.lmp
base/id1.wad/: dehacked.lmp  sbardef.lmp
base/nerve.wad/: umapdef.lmp
base/rekkr-all/: dehacked.lmp
cmake/: CrossToWin32.cmake  CrossToWin64.cmake  FindFFTW3f.cmake  FindFluidSynth.cmake  FindOpenAL.cmake  FindPortMidi.cmake  FindRtMidi.cmake  FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindSDL2_net.cmake  FindSndFile.cmake  Findlibebur128.cmake  Findlibxmp.cmake  Findmodplug.cmake  Findsamplerate.cmake  InstallZlib.cmake  WoofSettings.cmake  config.h.in
cmake/modules/: FindDiscordRPC.cmake  (+6 more)
configs/: Makefile.am  common.cfg
data/: CMakeLists.txt  Makefile.am  alsoft  convert-icon  io.github.fabiangreffrath.woof.desktop  io.github.fabiangreffrath.woof.metainfo.in  io.github.fabiangreffrath.woof.metainfo.xml  woof-setup.desktop  woof.6  woof.desktop
demotest/: config.toml  config.yml  demotest
docs/: CMakeLists.txt  Makefile.am  WoofInstall.cmake.in  boom.txt  boomdeh.txt  boomref.txt  changes.txt  cheats.md  log_inventor200  log_jff.txt  log_lee.txt  log_rsp.txt  log_ty.txt  mapcolors_vanilla.cfg  mbf-bugs.html  mbf-bugs.md  mbf.txt  mbf21.md  mbfedit.txt  mbffaq.txt  options.txt  sbardef.md  udmf_woof.txt  winmbf02.txt  winmbf02s.txt  woofhud.lmp  woofhud.md
examples/: CMakeLists.txt  Makefile.am  WoofInstall.cmake.in  ambient_showcase.txt  ambient_showcase.wad  battle.wad  dogfly.deh  donut.txt  donut.wad  fireplas.deh  fly.deh  friend.deh  grenade.deh  hockey.wad  mbfedit.txt  mbfedit.wad  mine.deh  mushroom.deh  playbud.deh  possbud.deh  sky.wad  touchy.deh
man/: .gitignore  CMDLINE.template.md  CMakeLists.txt  WoofInstall.cmake.in  docgen  iwad_paths.man  setup.template  woof.template
man/bash-completion/: .gitignore  woof.template
mapping/: Woof_Doom2UDMF.cfg
midiproc/: CMakeLists.txt  buffer.c  buffer.h  main.c
miniz/: CMakeLists.txt  miniz.c  miniz.h
netlib/: CMakeLists.txt  netlib.c  netlib.h
opl/: CMakeLists.txt  opl.c  opl.h  opl3.c  opl3.h  opl_emu.c  opl_internal.h  opl_queue.h  opl_sdl.c
pffft/: CMakeLists.txt  pffft.c
pkg/: .gitignore  Makefile.am  config.make.in
setup/: CMakeLists.txt  execute.c  execute.h  mainmenu.c  manifest.xml  multiplayer.c  multiplayer.h  setup_icon.c
showcase/: ambient_showcase.wad
soundfonts/: LICENSE.txt  copyright
spng/: CMakeLists.txt
src/: .gitignore  CMakeLists.txt  am_conf.c  am_def.c  am_map.c  am_map.h  beta.h  cross.h  d_deh.c  d_deh.h  d_demoloop.c  d_demoloop.h  d_englsh.h  d_event.h  d_french.h  d_io.h  d_items.c  d_items.h  d_iwad.c  d_iwad.h  d_loop.c  d_loop.h  d_main.c  d_main.h  d_net.c  d_net.h  d_player.h  d_quit.c  d_quit.h  d_textur.h  d_think.h  d_ticcmd.h  decl_defs.h  decl_main.c  decl_main.h  decl_misc.h  decl_props.c  decl_sounds.c  decl_sounds.h  decl_states.c  (+384 more)
textscreen/: CMakeLists.txt  textscreen.h  txt_button.c  txt_button.h  txt_checkbox.c  txt_checkbox.h  txt_desktop.c  txt_dropdown.c  txt_dropdown.h  txt_fileselect.c  txt_gui.c  txt_inputbox.c  txt_inputbox.h  txt_io.c  txt_label.c  txt_label.h  txt_main.h  txt_scrollpane.c  txt_scrollpane.h  txt_sdl.c  txt_sdl.h  txt_separator.c  txt_separator.h  txt_spinctrl.c  txt_strut.c  txt_strut.h  txt_table.c  txt_table.h  txt_utf8.c  txt_widget.c  txt_widget.h  txt_window.c  txt_window.h  txt_window_action.h
textscreen/fonts/: .gitignore  CMakeLists.txt  README  convert-font  normal.h
toolsrc/: CMakeLists.txt  Makefile.am  bin2c.c  bmp2c.c  fakedate.asm  swantbls.c
win32/: CMakeLists.txt  win-textfile.c  win_console_wrapper.c  win_fopen.c  win_fopen.h  win_launcher.c  win_opendir.c  win_opendir.h  win_version.c  win_version.h
(+27 files in other folders)
